Update to new react version

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "default-shell": "^1.0.1",
-    "etch": "^0.12.7",
-    "node-pty": "^0.7.3"
+    "node-pty": "^0.7.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-split-pane": "^0.1.71"
   }
 }
