Get the terminal up and running

--- a/lib/config.json
+++ b/lib/config.json
@@ -45,6 +45,10 @@
       "bar"
     ]
   },
+  "shellArgs": {
+    "type": "string",
+    "default": "--login"
+  },
   "bell": {
     "type": "object",
     "properties": {
