--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "chokidar": "^1.7.0",
     "default-shell": "^1.0.1",
-    "node-pty": "^0.7.3",
+    "is-hotkey": "^0.1.1",
+    "nested-property": "0.0.7",
+    "node-pty": "^0.7.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-split-pane": "^0.1.71"
+    "react-split-pane": "^0.1.74"
   }
 }
