Remove yarn.lock and add xterm dependency

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-pty": "^0.7.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-split-pane": "^0.1.74"
+    "react-split-pane": "^0.1.74",
+    "xterm": "^3.0.1"
   },
   "keywords": [
     "archipelago",
