--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Archipelago",
+  "name": "archipelago",
   "main": "./lib/archipelago",
   "version": "0.1.0",
   "description": "Archipelago for Atom is an extension of the Archipelago desktop app for Atom.",
