Fix lint and update config

--- a/lib/config.json
+++ b/lib/config.json
@@ -27,9 +27,8 @@
     "default": true
   },
   "letterSpacing": {
-    "type": "number",
-    "default": 0,
-    "minimum": 0
+    "type": "string",
+    "default": "0"
   },
   "scrollback": {
     "type": "integer",
